--- a/.github/workflows/compile.yaml
+++ b/.github/workflows/compile.yaml
@@ -13,12 +13,22 @@ jobs:
       with:
         path: sandbox_fort
 
-    - name: Compile
+    - name: Cache Sandbox build
+      id: cache-sandbox
+      uses: actions/cache@v2
+      with:
+        path: ~/bin
+        key: sandbox-20211119-${{ runner.os }}-gnu
+
+    - name: Build 
+      if: steps.cache-sandbox.outputs.cache-hit != 'true'
       run: |
         cd $GITHUB_WORKSPACE/sandbox_fort/src
         gfortran -o a.out test.f90
+        mkdir -p ~/bin
+        cp a.out ~/bin/.
 
     - name: Run executable
       run: |
-        cd $GITHUB_WORKSPACE/sandbox_fort/src
+        cd ~/bin
         ./a.out
