--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test:
-    if: ${{ github.event.label.name == 'bug' }}
+    #if: ${{ github.event.label.name == 'bug' }}
     runs-on: ubuntu-latest
     name: Tested on Orion
 
